eks/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos-api-deployment
  labels:
    app: pos-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pos-api
  template:
    metadata:
      labels:
        app: pos-api
    spec:
      containers:
      - name: pos-api
        image: 420122552625.dkr.ecr.ap-southeast-1.amazonaws.com/pos-api-service:bd9f43a7a9a6b92de4c946c091da23f92c288153
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
