eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pos-api-service
spec:
  selector:
    app: pos-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
