eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # this will rewrite request under / + second capture group
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: api.simple-bank.top
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pos-api-service
            port:
              number: 80
